objects/CSAPEN_Cisco_Landscape__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Cisco Landscape</relationshipLabel>
        <relationshipName>Cisco_Landscape</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cisco_Technology_Share__c</fullName>
        <description>Percentage of the Technology that is currently Cisco technology.</description>
        <label>Cisco Technology Share (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Multi-select picklist of Cisco’s competitors used to identify the competitors that are competing for a share of the spend for the Technology.</description>
        <label>Competitors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3Com</fullName>
                </value>
                <value>
                    <fullName>Airspace</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Apresia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avici</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Boda</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
                <value>
                    <fullName>Cabletron</fullName>
                </value>
                <value>
                    <fullName>Charlotte's Web</fullName>
                </value>
                <value>
                    <fullName>Checkpoint</fullName>
                </value>
                <value>
                    <fullName>Ciena</fullName>
                </value>
                <value>
                    <fullName>Clarent</fullName>
                </value>
                <value>
                    <fullName>Corrigent</fullName>
                </value>
                <value>
                    <fullName>Cosine</fullName>
                </value>
                <value>
                    <fullName>Da Tang</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Digital China</fullName>
                </value>
                <value>
                    <fullName>Enterasys</fullName>
                </value>
                <value>
                    <fullName>Ericsson</fullName>
                </value>
                <value>
                    <fullName>Extreme Networks</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>Force10</fullName>
                </value>
                <value>
                    <fullName>Foundry Networks</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Additional description information regarding this landscape.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Addressable_Mkt_000__c</fullName>
        <description>Currency field to capture total addressable market in thousands of $s this fiscal year for the Technology.</description>
        <label>Fiscal Year Addressable Mkt ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Cisco_Booking_000__c</fullName>
        <description>Currency field to capture current Cisco bookings in thousands of $s this fiscal year to-date for the Technology.</description>
        <label>Fiscal Year Cisco Booking ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <description>Picklist to identify who is currently providing the Technology.</description>
        <label>Incumbent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>None Installed</fullName>
                </value>
                <value>
                    <fullName>Don't Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Share__c</fullName>
        <description>Non-editable, formula field that calculates the % of Cisco’s market for the Technology by dividing the Fiscal Year Addressable Mkt ($’000) by the Fiscal Year Cisco Booking ($’000).</description>
        <formula>IF( Fiscal_Year_Addressable_Mkt_000__c =0, 0,  Fiscal_Year_Cisco_Booking_000__c  /  Fiscal_Year_Addressable_Mkt_000__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Next_Fiscal_Year_Addressable_Mkt_000__c</fullName>
        <description>Currency field to capture total addressable market in thousands of $s next fiscal year for the Technology.</description>
        <label>Next Fiscal Year Addressable Mkt ($'000)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Text field used to capture any other relevant information that will help better understand the Cisco Landscape.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>URL field to link to other relevant information.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <description>Cisco’s current Partner for providing the Technology to the customer.</description>
        <label>Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_of_Choice__c</fullName>
        <description>Cisco’s Partner of Choice for the Technology.</description>
        <label>Partner of Choice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>CASE(Technology__c, "Application Oriented Networks", "Application Oriented Networks", "Broadband Subscriber", "Broadband Subscriber", "Contact Center", "Contact Center", "Content Networking", "Content Networking", "Core Routing", "Core Routing", "Core Switching", "Core Switching", "Data Center", "Data Center", "Desktop Switching", "Desktop Switching", "Edge Routing", "Edge Routing", "Home Networking", "Home Networking", "IP Audioconferencing", "IP Audioconferencing", "IP Telephony", "IP Telephony", "IP Videoconferencing", "IP Videoconferencing", "Metro Ethernet", "Metro Optical", "Metro Optical", "Mobile Wireless", "Mobile Wireless", "Network Management", "Network Management", "Optical", "Optical", "Security", "Security", "Service Provider Voice", "Service Provider Voice", "Wireless Networking", "Wireless Networking", "Other", "Other", "--None--","NOT DEFINED")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cisco_Land_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cisco Land Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>A specific Technology that the Cisco Landscape represents.</description>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application Oriented Networks</fullName>
                </value>
                <value>
                    <fullName>Broadband Subscriber</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
                <value>
                    <fullName>Content Networking</fullName>
                </value>
                <value>
                    <fullName>Core Routing</fullName>
                </value>
                <value>
                    <fullName>Core Switching</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Desktop Switching</fullName>
                </value>
                <value>
                    <fullName>Edge Routing</fullName>
                </value>
                <value>
                    <fullName>Home Networking</fullName>
                </value>
                <value>
                    <fullName>IP Audioconferencing</fullName>
                </value>
                <value>
                    <fullName>IP Telephony</fullName>
                </value>
                <value>
                    <fullName>IP Videoconferencing</fullName>
                </value>
                <value>
                    <fullName>Metro Ethernet</fullName>
                </value>
                <value>
                    <fullName>Metro Optical</fullName>
                </value>
                <value>
                    <fullName>Mobile Wireless</fullName>
                </value>
                <value>
                    <fullName>Network Management</fullName>
                </value>
                <value>
                    <fullName>Optical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider Voice</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>WAAS</fullName>
                </value>
                <value>
                    <fullName>Webex</fullName>
                </value>
                <value>
                    <fullName>Wireless Networking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Customer's landscape of products/technologies the Cisco actively sells</description>
    <label>zzCisco Landscape</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Landscape Component</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cisco Landscape</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>